# create-python-app

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
src/: app.py
test/: test_app.py
tests/: test_app.py
