[tool.poetry]
name = "create-python-app"
version = "0.1.0"
description = ""
authors = ["zachvalenta <zjv5002@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.10.3"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
bandit = "^1.6.2"
pytest = "^5.3.2"
bpython = "^0.18"
coverage = "^5.0.2"
flake8 = "^3.7.9"
pdoc3 = "^0.7.2"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
